fix some whitespace for mobile styles

--- a/css/litewrite.css
+++ b/css/litewrite.css
@@ -75,7 +75,7 @@ footer a { display:inline; padding:0; }
 /* Smartphones (portrait and landscape) ----------- */
 @media (max-width:720px) {
 	.editor {
-		padding:15% 5% 5% 0; margin:0 0 0 5%; width:100%; font-size:20px;
+		padding:50px 14px; margin:0; width:100%; font-size:20px;
 		left:0;
 		-webkit-transition:all .3s ease; -moz-transition:all .3s ease; transition:all .3s ease;
 	}
@@ -120,7 +120,6 @@ footer a { display:inline; padding:0; }
 
 @media (max-width:720px) and (orientation:landscape) {
 	.menu-button { display:none; }
-	.editor { padding:8% 2% 2% 0; margin:0 0 0 2%; width:98%; }
 	.add { margin-top:0; }
 }
 
